# rick-portal-gun

./: pyproject.toml
.github/workflows/: python-publish.yml
rick_portal_gun/: main.py
