[tool.poetry]
name = "rick-portal-gun"
version = "0.1.0"
description = ""
authors = ["Alaqrakhadija <alaqrakhadija@gmail.com>"]
readme = "README.md"
packages = [{include = "rick_portal_gun"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.7.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rick-portal-gun = "rick_portal_gun.main:app"
